--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -8,6 +8,7 @@
   font-weight: 100;
   src: url("../../static/fonts/MuseoSansCyrl-100.otf");
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -15,6 +16,7 @@
   font-weight: 300;
   src: url("../../static/fonts/MuseoSansCyrl-300.otf");
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -22,6 +24,7 @@
   font-weight: 500;
   src: url("../../static/fonts/MuseoSansCyrl-500.otf");
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,6 +32,7 @@
   font-weight: 700;
   src: url("../../static/fonts/MuseoSansCyrl-700.otf");
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -36,12 +40,14 @@
   font-weight: 900;
   src: url("../../static/fonts/MuseoSansCyrl-900.otf");
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: Muller;
   src: url("../../static/fonts/MullerMedium.ttf");
   font-style: normal;
+  font-display: swap;
 }
 
 html,
