--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2,6 +2,7 @@
 @import "modals/3d.scss";
 @import "yandexMap/yandex.scss";
 @import "modals/geoModal.scss";
+@import "sliders/slider.scss";
 
 @font-face {
   font-family: Museo Sans Cyrl;
