--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -300,8 +300,8 @@ input {
     padding: 5px 0;
     max-height: 200px;
     overflow-y: auto;
-    -webkit-transform: translate3d(0, 100%, 0);
-    -webkit-overflow-scrolling: touch;
+    //-webkit-transform: translate3d(0, 100%, 0);
+    //-webkit-overflow-scrolling: touch;
 
     &__item {
       padding: 5px 20px;
