--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -293,7 +293,7 @@ input {
 
   &__bottom {
     position: absolute;
-    bottom: 0;
+    top: 100%;
     background: white;
     border: 1px solid #228596;
     border-top: none;
@@ -304,7 +304,7 @@ input {
     padding: 5px 0;
     max-height: 200px;
     overflow-y: auto;
-    -webkit-transform: translate3d(0, 100%, 0);
+    //-webkit-transform: translate3d(0, 100%, 0);
 
 
     &__item {
