--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -5462,6 +5462,14 @@ input {
   }
 }
 
+.map__img {
+  width: 292px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+
 // after 1230px
 // beh is breaking, so making it smaller just like in the TABLET version
 @media (max-width: 1230px) {
