--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -51,9 +51,7 @@
   font-display: swap;
 }
 
-body {
-  -webkit-overflow-scrolling: touch;
-}
+
 
 html,
 body,
@@ -304,6 +302,7 @@ input {
     padding: 5px 0;
     max-height: 200px;
     overflow-y: auto;
+    transform: translate3d(0,0,0);
     //-webkit-transform: translate3d(0, 100%, 0);
 
 
