--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9682,3 +9682,10 @@ body.touch {
   height: 20px !important;
   margin: 0 9px !important;
 }
+.full-size-btn {
+  bottom: 20px;
+  right: 20px;
+  background: transparent;
+  box-shadow: none;
+  border: unset;
+}
