--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1517,7 +1517,7 @@ input {
 
     .custom-card {
       &__pic {
-        height: 300px;
+        height: 340px;
       }
     }
 
@@ -3716,7 +3716,7 @@ input {
   &__price {
     margin-top: 5px;
     font-size: 14px !important;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 17px;
     color: #115c91 !important;
   }
@@ -9688,4 +9688,11 @@ body.touch {
   background: transparent;
   box-shadow: none;
   border: unset;
+}
+.see-all--orange {
+  color: #FCAB2D !important;
+
+  &:hover {
+    color: #9ea6ae !important;
+  }
 }
